syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 212
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message SceneEntityDrownReq {
	uint32 entity_id = 14;
}
